Creado mediante Colaboratory

--- a/practico1.ipynb
+++ b/practico1.ipynb
@@ -6,8 +6,7 @@
       "name": "practico1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "mount_file_id": "1ed6LgSAGwy1cn27Ol80fQoz8rqHZ7eFR",
-      "authorship_tag": "ABX9TyMNlkWxoKzIXrKQPf4CcNPH",
+      "authorship_tag": "ABX9TyMckrFaixwQ3fvIhF+WyxN7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,13 +52,37 @@
         "import matplotlib.patches\n",
         "\n",
         "plt.rcParams['axes.grid'] = True\n",
-        "plt.rcParams['figure.figsize'] = (10, 5)"
+        "plt.rcParams['figure.figsize'] = (10, 5)\n",
+        "\n",
+        "!wget --no-cache --backups=1 https://raw.githubusercontent.com/santisis/frs22/master/LB_2018_completo.csv"
       ],
       "metadata": {
-        "id": "-sn9vUnBWdEW"
+        "id": "-sn9vUnBWdEW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6c9948be-e36d-497e-cbae-cea6a5c09334"
       },
-      "execution_count": 146,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2022-04-15 14:16:36--  https://raw.githubusercontent.com/santisis/frs22/master/LB_2018_completo.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 1010101 (986K) [text/plain]\n",
+            "Saving to: ‘LB_2018_completo.csv’\n",
+            "\n",
+            "\rLB_2018_completo.cs   0%[                    ]       0  --.-KB/s               \rLB_2018_completo.cs 100%[===================>] 986.43K  --.-KB/s    in 0.04s   \n",
+            "\n",
+            "2022-04-15 14:16:36 (26.9 MB/s) - ‘LB_2018_completo.csv’ saved [1010101/1010101]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -75,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 4,
       "metadata": {
         "id": "mlmwyk-XUl7h"
       },
@@ -225,9 +248,9 @@
           "height": 1000
         },
         "id": "I3co9wV4XfNb",
-        "outputId": "d76a78a3-85ab-42d1-f3a8-72e43dec598d"
+        "outputId": "5765e61f-5b60-4a85-e4ba-bd147ba6fd97"
       },
-      "execution_count": 148,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -364,7 +387,7 @@
       "metadata": {
         "id": "DTQ_hBchWYzq"
       },
-      "execution_count": 149,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -422,9 +445,9 @@
           "height": 1000
         },
         "id": "EXnRasKVxVRz",
-        "outputId": "2c8126b4-35ac-406b-dce4-5da032ef80f0"
+        "outputId": "aef7ce75-fbd4-4a15-fbd9-ad02e817d375"
       },
-      "execution_count": 150,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,9 +555,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JQWTes-sEg27",
-        "outputId": "1f177097-7658-48f0-a20e-66bc2c668b16"
+        "outputId": "4d8946fd-7e3b-4370-de94-502569bf00c6"
       },
-      "execution_count": 151,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,9 +591,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GhHA1hxWHdeZ",
-        "outputId": "87c65aad-544a-4aeb-d58b-73e4124b239b"
+        "outputId": "4e6edff0-767b-4fc0-c43e-5ba0ce922122"
       },
-      "execution_count": 152,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -611,9 +634,9 @@
           "height": 373
         },
         "id": "Mu8WFclWJ9cV",
-        "outputId": "a9a75536-83a3-445e-c18e-01f649067745"
+        "outputId": "3a6a9359-a889-436d-e57d-ccecb9964fee"
       },
-      "execution_count": 153,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -668,9 +691,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KOTyOyR7ayLL",
-        "outputId": "52c417ff-18fb-4f83-b89b-d4961bf66809"
+        "outputId": "42bcf988-b9db-4ed5-ed78-b2e4e877ac17"
       },
-      "execution_count": 154,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,9 +740,9 @@
           "height": 336
         },
         "id": "KF2aMNAjeEB0",
-        "outputId": "156e3157-e928-4abf-9ac4-bb882f483a9f"
+        "outputId": "aad391db-6459-4990-a204-28b0ae4b8ac5"
       },
-      "execution_count": 155,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -810,9 +833,9 @@
           "height": 643
         },
         "id": "O3G_STbIh6On",
-        "outputId": "e8f29a25-dd63-4c02-c993-33d994903584"
+        "outputId": "11a6c614-46c4-40ad-df25-02886c1b46ae"
       },
-      "execution_count": 156,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -867,7 +890,7 @@
       "metadata": {
         "id": "BOd_lxTUCak-"
       },
-      "execution_count": 157,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -878,7 +901,8 @@
         "\n",
         "lblat = radians(-34.67)\n",
         "lblon = radians(-56.34)\n",
-        "lb = pandas.read_csv('drive/MyDrive/Colab Notebooks/LB_2018_completo.csv', index_col='Fecha')\n",
+        "\n",
+        "lb = pandas.read_csv('LB_2018_completo.csv', index_col='Fecha')\n",
         "\n",
         "#print(lb.describe())\n",
         "\n",
@@ -904,9 +928,9 @@
           "height": 612
         },
         "id": "S-ilP1Ze65dG",
-        "outputId": "26f07a6c-e55a-4fa9-f6ee-e3e7ddbca018"
+        "outputId": "02a7639a-d86c-4ebb-f8f1-896885ddf116"
       },
-      "execution_count": 158,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -963,9 +987,9 @@
           "height": 338
         },
         "id": "jYU7aqVaRtiq",
-        "outputId": "dc1c1f00-46dc-4e51-b0d7-dfd2e728c2a8"
+        "outputId": "0ba2b698-919c-4613-924e-bfce9edc9307"
       },
-      "execution_count": 159,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1013,7 +1037,7 @@
       "metadata": {
         "id": "oi6KW2fSYFgM"
       },
-      "execution_count": 160,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1031,9 +1055,9 @@
           "height": 641
         },
         "id": "sRk5z7u4bMWY",
-        "outputId": "8853c342-aaef-4e5b-d84a-0dcd1fced2bf"
+        "outputId": "93dd1110-81b0-44f6-f888-eb5f7aafe396"
       },
-      "execution_count": 161,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1051,11 +1075,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7fa1cc78a510>]"
+              "[<matplotlib.lines.Line2D at 0x7f3639ed0e50>]"
             ]
           },
           "metadata": {},
-          "execution_count": 161
+          "execution_count": 18
         },
         {
           "output_type": "display_data",
